--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<html>
+  <head>
+    <title>This is my title</title>
+  </head>
+  <body>
+    <body style="background-color:darkgray;">
+    <p>Lorem Ipsum</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sem leo, porta eu quam at, dignissim tempus ligula. Phasellus leo risus, faucibus et sodales eget, lobortis nec mauris. Nulla efficitur tincidunt sagittis. In sem mi, luctus in euismod ut, cursus et odio. Aliquam erat volutpat. Cras placerat maximus neque feugiat auctor. Nunc augue sem, convallis id velit nec, accumsan tincidunt neque. Phasellus pharetra nibh sed mi vehicula hendrerit. Vestibulum aliquet in lacus nec rutrum. Morbi euismod posuere ex.
+
+Phasellus tortor risus, cursus ut ipsum et, tristique viverra tortor. Nulla lorem orci, pulvinar a leo sit amet, semper facilisis enim. Aenean placerat lorem a augue dapibus, sit amet tincidunt risus pretium. Mauris rhoncus non nunc id egestas. Morbi scelerisque sem cursus dignissim lacinia. Sed in lacinia lectus. Integer lacus mauris, blandit laoreet feugiat quis, pretium sed orci. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc ornare tempor nisi vitae ullamcorper. Aenean magna risus, congue nec erat vitae, rutrum laoreet sem. Praesent sit amet orci tempor, semper justo vitae, interdum lectus. Fusce mollis venenatis nulla, quis ullamcorper neque iaculis et. Sed condimentum gravida enim, a bibendum felis maximus vitae. Integer risus sapien, molestie vitae dignissim a, congue id ante.<a href="https://www.google.com/">Click here to go to Google.</a></p>
+
+    <ol>
+      <li>First time</li>
+      <li>Second time</li>
+    </ol>
+
+    <img src="https://78.media.tumblr.com/668f8fa044b09642396ee8be9846b449/tumblr_olspqaVPMy1u9ru6ro1_500.png" alt="This is an enlightenment image."/>
+  </body>
+</html>
